# cleverleaf

./: .gitignore  .gitmodules  RAJA  configure  configure.apollo  configure.normal  configure.traced  go  go.hard  go.raja  test.sh
SAMRAI/: CMakeLists.txt  COPYRIGHT  INSTALL-NOTES  Makefile.in  README  README.md  RELEASE-NOTES  config.suggest  configure  configure.in
SAMRAI/blt/tests/smoke/: blt_openmp_smoke.cpp
SAMRAI/cmake/: CMakeConfigureFile.cmake  SAMRAIMacros.cmake  SetupCompilers.cmake
SAMRAI/config/: Makefile.config.in  Makefile.config.install.in  SAMRAI_config.h.cmake.in  SAMRAI_config.h.in  aclocal.m4  config.guess  samrai_timers.m4  serpa-run.in  support-conduit.m4
SAMRAI/docs/: Makefile.in
SAMRAI/docs/release/: version-1.4.0  version-1.5.0  version-2.0.0  version-2.0.0-beta  version-2.1.0  version-2.2.0  version-2.2.1  version-2.3.0  version-2.4.0  version-3.1.0-beta  version-3.10.0  version-3.11.1  version-3.2.1  version-3.4.1  version-3.5.2  version-3.6.1  version-3.8.0  version-3.8.1  version-3.9.0
SAMRAI/source/: CMakeLists.txt  Makefile.in
SAMRAI/source/SAMRAI/: Makefile.in  mainpage.dox
SAMRAI/source/SAMRAI/algs/: CMakeLists.txt  HyperbolicLevelIntegrator.C  HyperbolicLevelIntegrator.h  HyperbolicPatchStrategy.C  HyperbolicPatchStrategy.h  ImplicitEquationStrategy.C  ImplicitIntegrator.C  Makefile.depend  Makefile.in  MethodOfLinesIntegrator.C  MethodOfLinesIntegrator.h  MethodOfLinesPatchStrategy.C  MethodOfLinesPatchStrategy.h  OuteredgeSumTransaction.C  OuteredgeSumTransactionFactory.C  OuternodeSumTransaction.C  OuternodeSumTransactionFactory.C  OuternodeSumTransactionFactory.h  PatchBoundaryEdgeSum.C  PatchBoundaryEdgeSum.h  PatchBoundaryNodeSum.C  PatchBoundaryNodeSum.h  TimeRefinementIntegrator.C  TimeRefinementIntegratorConnectorWidthRequestor.C  TimeRefinementLevelStrategy.C  TimeRefinementLevelStrategy.h
SAMRAI/source/SAMRAI/appu/: BoundaryUtilityStrategy.C  BoundaryUtilityStrategy.h  CMakeLists.txt  CartesianBoundaryUtilities2.C  CartesianBoundaryUtilities2.h  CartesianBoundaryUtilities3.C  CartesianBoundaryUtilities3.h  Makefile.depend  Makefile.in  VisDerivedDataStrategy.C  VisItDataWriter.C  VisMaterialsDataStrategy.C
SAMRAI/source/SAMRAI/geom/: CMakeLists.txt  CartesianCellComplexConservativeLinearRefine.C  CartesianCellComplexLinearRefine.C  CartesianCellComplexWeightedAverage.C  CartesianCellComplexWeightedAverage.h  CartesianCellDoubleConservativeLinearRefine.C  CartesianCellDoubleConservativeLinearRefine.h  CartesianCellDoubleLinearRefine.C  CartesianCellDoubleLinearRefine.h  CartesianCellDoubleWeightedAverage.C  CartesianCellDoubleWeightedAverage.h  CartesianCellFloatConservativeLinearRefine.C  CartesianCellFloatLinearRefine.C  CartesianCellFloatLinearRefine.h  CartesianCellFloatWeightedAverage.C  CartesianCellFloatWeightedAverage.h  CartesianEdgeComplexWeightedAverage.C  CartesianEdgeDoubleConservativeLinearRefine.C  CartesianEdgeDoubleWeightedAverage.C  CartesianEdgeFloatConservativeLinearRefine.C  CartesianEdgeFloatWeightedAverage.C  CartesianEdgeFloatWeightedAverage.h  CartesianFaceComplexWeightedAverage.C  CartesianFaceDoubleConservativeLinearRefine.C  CartesianFaceDoubleWeightedAverage.C  CartesianFaceFloatConservativeLinearRefine.C  CartesianFaceFloatConservativeLinearRefine.h  CartesianFaceFloatWeightedAverage.C  CartesianFaceFloatWeightedAverage.h  CartesianGridGeometry.C  CartesianGridGeometry.h  CartesianNodeComplexLinearRefine.C  CartesianNodeDoubleLinearRefine.C  CartesianNodeFloatLinearRefine.C  CartesianOuterfaceComplexWeightedAverage.C  CartesianOuterfaceComplexWeightedAverage.h  CartesianOuterfaceDoubleWeightedAverage.C  CartesianOuterfaceFloatWeightedAverage.C  CartesianOutersideDoubleWeightedAverage.C  CartesianPatchGeometry.C  (+14 more)
SAMRAI/source/SAMRAI/hier/: AssumedPartition.C  AssumedPartitionBox.C  AssumedPartitionBox.h  BaseConnectorAlgorithm.C  BaseConnectorAlgorithm.h  BaseGridGeometry.C  BaseGridGeometry.h  BlockId.C  BlueprintUtils.C  BlueprintUtils.h  BlueprintUtilsStrategy.C  BlueprintUtilsStrategy.h  BoundaryBox.C  BoundaryBox.h  BoundaryBoxUtils.C  BoundaryBoxUtils.h  BoundaryLookupTable.C  Box.C  Box.h  BoxContainer.C  BoxContainerSingleBlockIterator.C  BoxContainerSingleOwnerIterator.C  BoxContainerUtils.C  BoxGeometry.C  BoxId.C  BoxLevel.C  BoxLevelConnectorUtils.C  BoxLevelConnectorUtils.h  BoxLevelHandle.C  BoxLevelStatistics.C  BoxLevelStatistics.h  BoxNeighborhoodCollection.C  BoxNeighborhoodCollection.h  BoxOverlap.C  BoxTree.C  BoxUtilities.C  BoxUtilities.h  CMakeLists.txt  CoarseFineBoundary.C  CoarseFineBoundary.h  (+60 more)
SAMRAI/source/SAMRAI/math/: ArrayDataMiscellaneousOpsReal.C  CMakeLists.txt  (+75 more)
SAMRAI/source/scripts/: change_copyright  cmp.pl  cscope_create_database  depend  depend.pl  indent.pl  rename_license
SAMRAI/source/test/: CMakeLists.txt  Makefile.in  README
SAMRAI/tools/: Makefile.in
SAMRAI/tools/restart/: Makefile.depend  Makefile.in  RedistributedRestartUtility.C  RedistributedRestartUtility.h  main.C
SAMRAI/tools/scripts/: README
cleverleaf/: CMakeLists.txt  build-nvcc.sh  configure
cleverleaf/cmake/: FindAPOLLO.cmake
cleverleaf/src/: CMakeLists.txt  main.C
cleverleaf/src/geom/: CMakeLists.txt  CartesianCellDoubleConservativeLinearRefine.C  CartesianCellDoubleConservativeLinearRefine.h  CartesianCellDoubleMassWeightedAverage.C  CartesianCellDoubleMassWeightedAverage.h  CartesianCellDoubleVolumeWeightedAverage.C  CartesianCellDoubleVolumeWeightedAverage.h  CartesianCellIntConstantCoarsen.C  CartesianCellIntConstantCoarsen.h  CartesianNodeDoubleLinearRefine.C  CartesianNodeDoubleLinearRefine.h  CartesianSideDoubleFirstOrderRefine.C  CartesianSideDoubleFirstOrderRefine.h
cleverleaf/src/hydro/: CMakeLists.txt  Cleverleaf.C  Cleverleaf.h  LagrangianEulerianIntegrator.C  LagrangianEulerianIntegrator.h  LagrangianEulerianLevelIntegrator.C  LagrangianEulerianLevelIntegrator.h  LagrangianEulerianPatchStrategy.C  LagrangianEulerianPatchStrategy.h
cleverleaf/src/pdat/: CMakeLists.txt  NodeInjection.C  NodeInjection.h  detail.C  detail.h
cleverleaf/test/: sodx.in
(+1822 files in other folders)
